--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <button>Home</button>
+            <button>Menu</button>
+            <button>Contact</button>
+        </nav>
+    </header>
+    <div id="content">
+        
+    </div>
 </body>
 </html>
