Adds tab switching

--- a/src/template.html
+++ b/src/template.html
@@ -7,13 +7,52 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>Contact</button>
+            <button type="button" id="home">Hjem</button>
+            <button type="button" id="menu">Meny</button>
+            <button type="button" id="locations">Her finner du oss</button>
         </nav>
     </header>
     <div id="content">
-        
+        <div id="home">
+            <h1></h1>
+            <p>
+                Velkommen til din lokale pizzabaker. Vi serverer klassiske italienske pizzaer.
+            </p>
+            <h1>Åpningstider</h1>
+            <p>
+                <div class="day-hours">
+                    <div class="day">Mandag</div>
+                    <div class="hours">10-20</div>
+                </div>
+                <div class="day-hours">
+                    <div class="day">Tirsdag</div>
+                    <div class="hours">10-20</div>
+                </div>
+                <div class="day-hours">
+                    <div class="day">Onsdag</div>
+                    <div class="hours">10-20</div>
+                </div>
+                <div class="day-hours">
+                    <div class="day">Torsdag</div>
+                    <div class="hours">10-20</div>
+                </div>
+                <div class="day-hours">
+                    <div class="day">Fredag</div>
+                    <div class="hours">10-22</div>
+                </div>
+                <div class="day-hours">
+                    <div class="day">Lørdag</div>
+                    <div class="hours">10-22</div>
+                </div>
+                <div class="day-hours">
+                    <div class="day">Søndag</div>
+                    <div class="hours">12-20</div>
+                </div>
+                
+            </p>
+            <h1>Her finner du oss</h1>
+            <p></p>
+        </div>
     </div>
 </body>
 </html>
